--- a/main.html
+++ b/main.html
@@ -4,8 +4,9 @@
 
 <title>Minieye 数据</title>
 
-<script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
-<script src="js/jquery.json-viewer.js"></script>
+<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.10.2.js"></script>
+<script src="jquery.json-viewer.js"></script>
+<link rel ="stylesheet" href="jquery.json-viewer.css" type="text/css"/>
 <script language="javascript" type="text/javascript">
 
   SIGNALONE='ask for fold ';
@@ -126,33 +127,6 @@
 
 </div>
 <style>
-    a{
-        text-decoration: none;
-    }
-    a:link{
-        color:black;
-    }
-    a:hover{
-        cursor:default;
-    }
-    pre{
-        height:800px;
-        overflow-y:scroll;
-        display: block;
-        padding: 9.5px;
-        margin: 0 0 10px;
-        font-size: 13px;
-        line-height: 1.42857143;
-        color: #333;
-        word-break: break-all;
-        word-wrap: break-word;
-        background-color: #f5f5f5;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-    }
-    ul li{
-        list-style-type:none;
-    }
     button{
         box-shadow: none;
         outline: none;
@@ -187,7 +161,6 @@
         border-bottom-right-radius:0.5em;
         box-shadow:0px 1px 2px rgba(0,0,0,0.2);
         text-shadow:0px 1px 1px rgba(0,0,0,0.3);
-        /* color:#fefee9; */
         border-top-color:#da7c0c;
         border-right-color:#da7c0c;
         border-bottom-color:#da7c0c;
